# CytoTable

./: .codespell-ignore  .gitignore  .pre-commit-config.yaml  .pylintrc  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  SECURITY.md  architecture.data.html  architecture.html  architecture.technical.html  code_of_conduct.html  contributing.html  contributing.md  env-conda.yaml  examples.html  genindex.html  index.html  objects.inv  overview.html  presentations.html  project.cue  py-modindex.html  pyproject.toml  python-api.html  readme.md  search.html  searchindex.js  tutorial.html  tutorials.html
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml  release-drafter.yml
.github/actions/setup-poetry/: action.yml
.github/workflows/: draft-release.yml  pre-commit-checks.yml  publish-docs.yml  publish-pypi-release.yml  publish-pypi.yml  test.yml
_modules/: index.html
_modules/cytotable/: convert.html  exceptions.html  sources.html  utils.html
_modules/cytotable/warehouse/: access.html  iceberg.html  images.html
_modules/pycytominer_transform/: convert.html  exceptions.html  sources.html  utils.html
_sources/: architecture.data.md.txt  architecture.technical.md.txt  code_of_conduct.md.txt  contributing.md.txt  index.md.txt  overview.md.txt  python-api.md.txt  tutorial.md.txt  tutorials.md.txt
_sources/examples/: cytotable_mise_en_place_general_overview.ipynb.txt  cytotable_with_profiles_and_images.ipynb.txt
_static/: alabaster.css  custom.css
cytotable/: __init__.py  access.py  constants.py  convert.py  exceptions.py  iceberg.py  images.py  presets.py  sources.py  utils.py  validation.py
cytotable/apps/: combine.py  modify.py  path.py  source.py  workflow.py
cytotable/warehouse/: __init__.py  access.py  iceberg.py  images.py
docs/: readme.md
docs/examples/: cytotable_mise_en_place.ipynb  cytotable_mise_en_place.py
docs/jupyter_execute/examples/: cytotable_from_the_cloud.ipynb  cytotable_mise_en_place_general_overview.ipynb
docs/source/: architecture.data.md  architecture.md  architecture.technical.md  code_of_conduct.md  conf.py  contributing.md  development.md  examples.md  index.md  overview.md  presentations.md  python-api.md  software_engineering.md  tutorial.md  tutorials.md
docs/source/_static/: dataflow.mmd
docs/source/examples/: cytotable_from_the_cloud.ipynb  cytotable_from_the_cloud.py  cytotable_mise_en_place.ipynb  cytotable_mise_en_place.py  cytotable_mise_en_place_general_overview.ipynb  cytotable_mise_en_place_general_overview.py  cytotable_with_profiles_and_images.ipynb  cytotable_with_profiles_and_images.py
docs/source/tutorials/: cellprofiler_sqlite_to_parquet.md  cellprofiler_to_parquet.md  iceberg_warehouse_with_images.md  multi_plate_merge_tablenumber.md  npz_embeddings_to_parquet.md
examples/: cytotable_from_the_cloud.html  cytotable_mise_en_place.html  cytotable_mise_en_place_general_overview.html  cytotable_with_profiles_and_images.html
pycytominer_transform/: __init__.py  convert.py  presets.py  records.py  sources.py  utils.py
pycytominer_transform/exceptions/: __init__.py
recipe/: conda_build_config.yaml  meta.yaml
tests/: conftest.py  test_access.py  test_convert.py  test_convert_threaded.py  test_iceberg.py  test_presets.py  test_sources.py  test_utils.py
tests/data/cellprofiler/ExampleHuman/: Cells.csv  Cytoplasm.csv  Experiment.csv  Image.csv  Nuclei.csv  PH3.csv
tests/data/cellprofiler/NF1_SchwannCell_data/: NF1_data.sqlite  all_cellprofiler.sqlite
tests/data/cellprofiler/cpg0043-segmentation/BR00116991-A01-1/: Cells.csv  Cells_BoundingBox_First.csv  Cells_Cellpose3.csv  Cells_Donut_Large.csv  Cells_Donut_Small.csv  Cells_HighThresh.csv  Cells_LowThresh.csv  Cytoplasm.csv  Cytoplasm_BBCBBN_First.csv  Cytoplasm_BBCN_First.csv  Cytoplasm_Cellpose3.csv  Cytoplasm_Donut_Large.csv  Cytoplasm_Donut_Small.csv  Cytoplasm_HighThresh.csv  Cytoplasm_LowThresh.csv  Experiment.csv  Image.csv  Nuclei.csv  Nuclei_BoundingBox_First.csv  Nuclei_BoundingBox_Overlap.csv  Nuclei_Cellpose3.csv  preCells_Cellpose3.csv  preNuclei_Cellpose3.csv
tests/data/cellprofiler/cpg0043-segmentation/BR00116991-A01-2/: Experiment.csv  Image.csv  Nuclei_BoundingBox_Overlap.csv  preCells_Cellpose3.csv  preNuclei_Cellpose3.csv
tests/data/cellprofiler/nf1_cellpainting_data/: shrink_Plate_3_nf1_analysis.sqlite_for_testing.py
tests/data/cytominer-database/Cell-Health/: shrink-SQ00014613.sqlite-for-testing.py  shrink_SQ00014613.sqlite_for_testing.py  test-SQ00014613.sqlite
tests/data/cytominer-database/data_a/1/: Cells.csv  Cytoplasm.csv  Nuclei.csv
tests/data/cytominer-database/data_a/2/: Cells.csv  Cytoplasm.csv  Nuclei.csv  object.csv
tests/data/cytominer-database/data_a_sqlite/: data_a.sqlite
tests/data/cytominer-database/data_b/: config_SQLite.ini
tests/data/cytominer-database/data_b_sqlite/: data_b.sqlite
tests/data/deepprofiler/pycytominer_example/: test_index.csv
tests/data/in-carta/colas-lab/: Test 0 Day0 Test Test_2024_Jan-01-12-12-12_Test.csv  Test 0 Day1 Test Test_2024_Jan-02-13-12-12_Test.csv  shrink_colas-lab_data_for_tests.py  shrink_colas_lab_data_for_tests.py  test-in-carta-2.csv  test-in-carta-3.csv
tests/test_apps/: test_combine.py  test_modify.py  test_path.py  test_source.py  test_workflow.py
tests/utils/: pylint_checker_no_ospath.py
tutorials/: cellprofiler_to_parquet.html  iceberg_warehouse_with_images.html  multi_plate_merge_tablenumber.html  npz_embeddings_to_parquet.html
