[tool.poetry]
name = "CytoTable"
version = "0.0.3"
description = "Transform CellProfiler and DeepProfiler data for processing image-based profiling readouts with Pycytominer and other Cytomining tools."
authors = ["Cytomining Community"]
license = "BSD-3-Clause License"
packages = [{include = "cytotable"}]
readme = "readme.md"
repository = "https://github.com/cytomining/CytoTable"
documentation = "https://cytomining.github.io/CytoTable/"
keywords = ["python", "cellprofiler","single-cell-analysis", "way-lab"]

[tool.poetry.dependencies]
python = ">=3.8,<3.13"
pyarrow = "^13.0.0"
cloudpathlib = {extras = ["all"], version = "^0.15.0"}
duckdb = ">=0.8.0"
parsl = ">=2023.9.25"

[tool.poetry.dev-dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
Sphinx = "^6.0.0"
myst-parser = "^2.0.0"
sphinxcontrib-mermaid = "^0.9.0"
moto = {extras = ["s3", "server"], version = "^4.0.0"}
cffconvert = "^2.0.0"
cytominer-database = "^0.3.4"
pycytominer = { git = "https://github.com/cytomining/pycytominer.git", rev = "09b2c79aa94908e3520f0931a844db4fba7fd3fb" }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.vulture]
min_confidence = 80
paths = ["cytotable"]
sort_by_size = true
verbose = true

[tool.isort]
profile = "black"

[tool.bandit]
exclude_dirs = ["tests"]
skips = ["B608"]

[tool.codespell]
ignore-words=".codespell-ignore"
