[build-system]
build-backend = "setuptools.build_meta"
requires = [ "setuptools>=64", "setuptools-scm>=8" ]

[project]
name = "cytotable"
description = "Transform CellProfiler and DeepProfiler data for processing image-based profiling readouts with Pycytominer and other Cytomining tools."
readme = "readme.md"
keywords = [ "cellprofiler", "python", "single-cell-analysis", "way-lab" ]
license = "BSD-3-Clause"
authors = [
  { name = "Cytomining Community" },
]
requires-python = ">=3.10,<3.15"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dynamic = [ "version" ]
dependencies = [
  "anndata<0.12.2; python_version<'3.11'",
  "anndata>=0.12.2; python_version>='3.11'",
  "botocore>=1.34.133,<2",
  "cloudpathlib[all,s3]>=0.18,<0.25",
  "duckdb>=0.8,!=0.10,>=0.10.1",
  "numpy<=1.24.4; python_version<'3.11'",
  "numpy>=1.26; python_version>='3.11'",
  "parsl>=2023.9.25",
  "pyarrow>=13",
  "scipy>=1.12,<2",
  # Explicit zarr dependency for
  # anndata <0.12.2 and Python <3.11
  "zarr<3.1.1; python_version<'3.11'",
  "zarr>=3.1.1; python_version>='3.11'",
]

optional-dependencies.iceberg = [ "pyiceberg>=0.11,<0.12" ]
optional-dependencies.iceberg-images = [
  "ome-arrow>=0.0.8,<0.1; python_version>='3.11'",
  "pyiceberg>=0.11,<0.12",
]
optional-dependencies.images = [ "ome-arrow>=0.0.8,<0.1; python_version>='3.11'" ]
urls.Documentation = "https://cytomining.github.io/CytoTable/"
urls.Repository = "https://github.com/cytomining/CytoTable"

[dependency-groups]
dev = [
  "cytominer-database>=0.3.4,<0.4",
  "pillow>=11.3,<13",
  "pycytominer>=1.1,<2",
  "pytest>=7.4,<10",
  "pytest-cov>=4.1,<8",
]
docs = [
  "black>=25.1,<27",
  "isort>=6.0.1,<9",
  "jupyterlab>=4.4.3,<5",
  "jupyterlab-code-formatter>=3.0.2,<4",
  "jupytext>=1.17.1,<2",
  "myst-nb>=1.2,<2",
  "myst-parser>=2,<5",
  "sphinx>=6,<9",
  "sphinxcontrib-mermaid>=0.9,<2.1",
  "typing-extensions>=4.14",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = [ "." ]
include = [ "cytotable*" ]

[tool.setuptools_scm]
root = "."
version_scheme = "no-guess-dev"
local_scheme = "no-local-version"
version_file = "cytotable/_version.py"

[tool.isort]
profile = "black"

[tool.codespell]
ignore-words = ".codespell-ignore"

[tool.pytest.ini_options]
filterwarnings = [
  "ignore::DeprecationWarning:pkg_resources",
  "ignore::DeprecationWarning:cytominer_database",
]
markers = [
  "large_data_tests: tests which involve the use of large data.",
]

[tool.jupytext]
formats = "ipynb,py:light"

[tool.vulture]
min_confidence = 80
paths = [ "cytotable" ]
sort_by_size = true
verbose = true

[tool.bandit]
exclude_dirs = [ "tests" ]
skips = [ "B608" ]
